kubernetes/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: development
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    my-company.com/environment: development
    my-company.com/owner: albert
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: my-company.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-kubernetes-example
                port:
                  number: 3000
  ingressClassName: nginx
